<resources>
    <string name="app_name">Mobillium Hasta Randevu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="klinik_ara">Klinik ara...</string>
    <string name="erkek">Erkek</string>
    <string name="kadin">Kadın</string>
    <string name="doktor_foto">Doktor Fotoğrafı</string>
    <string name="tikla">Tıkla</string>
    <string name="premium">Premium</string>
    <string name="randevu_al">Randevu Al</string>
    <string name="premium_paket_al">Premium Paket Al</string>
    <string name="randevu_ekrani">Randevu Ekranı</string>
    <string name="odeme_ekrani">Ödeme Ekranı</string>
    <string name="notfoundimage">notfoundimage</string>
    <string name="kullanic_bulunamadi">Kullanıcı Bulunamadı</string>
</resources>