<?xml version="1.0" encoding="utf-8"?><!-- FONT DEĞİŞTİR-->
<!-- FONT DEĞİŞTİR-->
<!-- FONT DEĞİŞTİR-->
<!-- FONT DEĞİŞTİR-->
<!-- FONT DEĞİŞTİR-->
<!-- FONT DEĞİŞTİR-->
<!-- FONT DEĞİŞTİR-->
<!-- FONT DEĞİŞTİR-->
<!-- FONT DEĞİŞTİR-->
<!-- FONT DEĞİŞTİR-->
<!-- FONT DEĞİŞTİR-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.DetayFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/green_tab_color"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_doctor_detail"
        android:layout_width="match_parent"
        android:layout_height="163dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_detail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_view_detail"
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/doktor_foto"
                android:src="@drawable/ic_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/doctor_name_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/premium"
                android:textColor="@color/mid_gray_text_color"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_view_detail" />

            <TextView
                android:id="@+id/premium_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/premium"
                android:textColor="@color/orange_text_color"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/doctor_name_detail" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_button_detail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/custom_layout"
        app:layout_constraintTop_toBottomOf="@id/card_view_doctor_detail">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/randevu_textview_detail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Randevu Al"
                android:textColor="@color/green_tab_color"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_button_detail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/tikla"
                android:src="@drawable/ic_navigate_next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>